syntax = "proto3";
package ununifi.yieldaggregator;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/base/v1beta1/coin.proto";
import "ununifi/yieldaggregator/params.proto";
// this line is used by starport scaffolding # 1
import "ununifi/yieldaggregator/yieldaggregator.proto";

option go_package = "github.com/UnUniFi/chain/x/yieldaggregator/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/params";
  }
  // this line is used by starport scaffolding # 2
  rpc VaultAll(QueryAllVaultRequest) returns (QueryAllVaultResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/vaults";
  }

  rpc VaultAllByShareHolder(QueryAllVaultByShareHolderRequest) returns (QueryAllVaultByShareHolderResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/vaults/share-holders/{share_holder}";
  }

  rpc Vault(QueryGetVaultRequest) returns (QueryGetVaultResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/vaults/{id}";
  }

  rpc StrategyAll(QueryAllStrategyRequest) returns (QueryAllStrategyResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/strategies";
  }

  rpc Strategy(QueryGetStrategyRequest) returns (QueryGetStrategyResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/strategies/{id}";
  }

  rpc EstimateMintAmount(QueryEstimateMintAmountRequest) returns (QueryEstimateMintAmountResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/vaults/{id}/estimate-mint-amount";
  }

  rpc EstimateRedeemAmount(QueryEstimateRedeemAmountRequest) returns (QueryEstimateRedeemAmountResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/vaults/{id}/estimate-redeem-amount";
  }

  rpc DenomInfos(QueryDenomInfosRequest) returns (QueryDenomInfosResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/denom-infos";
  }

  rpc SymbolInfos(QuerySymbolInfosRequest) returns (QuerySymbolInfosResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/symbol-infos";
  }

  rpc IntermediaryAccountInfo(QueryIntermediaryAccountInfoRequest) returns (QueryIntermediaryAccountInfoResponse) {
    option (google.api.http).get = "/ununifi/yieldaggregator/intermediary-account-info";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3

message QueryAllVaultRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message VaultContainer {
  Vault  vault               = 1 [(gogoproto.nullable) = false];
  string total_bonded_amount = 2 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
  string total_unbonding_amount = 3 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
  string withdraw_reserve = 4 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
  string total_pending_deposit = 5 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
}

message QueryAllVaultResponse {
  repeated VaultContainer                vaults     = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryAllVaultByShareHolderRequest {
  string share_holder = 1;
}

message QueryAllVaultByShareHolderResponse {
  repeated VaultContainer vaults = 1 [(gogoproto.nullable) = false];
}

message QueryGetVaultRequest {
  uint64 id = 1;
}

message QueryGetVaultResponse {
  Vault  vault               = 1 [(gogoproto.nullable) = false];
  string total_bonded_amount = 2 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
  string total_unbonding_amount = 3 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
  string withdraw_reserve = 4 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
  string total_pending_deposit = 5 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
  repeated Strategy strategies = 6 [(gogoproto.nullable) = false];
}

message QueryAllStrategyRequest {
  string                                denom      = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryAllStrategyResponse {
  repeated StrategyContainer             strategies = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetStrategyRequest {
  string denom = 1;
  uint64 id    = 2;
}

message StrategyContainer {
  Strategy strategy         = 1 [(gogoproto.nullable) = false];
  string   deposit_fee_rate = 2 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
  string withdraw_fee_rate = 3 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
  string performance_fee_rate = 4 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
}

message QueryGetStrategyResponse {
  StrategyContainer strategy = 1 [(gogoproto.nullable) = false];
}

message QueryEstimateMintAmountRequest {
  uint64 id             = 1;
  string deposit_amount = 2;
}

message QueryEstimateMintAmountResponse {
  cosmos.base.v1beta1.Coin mint_amount = 1 [(gogoproto.nullable) = false];
}

message QueryEstimateRedeemAmountRequest {
  uint64 id          = 1;
  string burn_amount = 2;
}

message QueryEstimateRedeemAmountResponse {
  cosmos.base.v1beta1.Coin share_amount = 1 [(gogoproto.nullable) = false];
  string                   fee          = 2 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
  string redeem_amount = 3 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
  string total_amount = 4 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
}

message QueryDenomInfosRequest {}

message QueryDenomInfosResponse {
  repeated DenomInfo info = 1 [(gogoproto.nullable) = false];
}

message QuerySymbolInfosRequest {}
message QuerySymbolInfosResponse {
  repeated SymbolInfo info = 1 [(gogoproto.nullable) = false];
}

message QueryIntermediaryAccountInfoRequest {}
message QueryIntermediaryAccountInfoResponse {
  repeated ChainAddress addrs = 1 [(gogoproto.nullable) = false];
}
